--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./mytodo.css" />
-    <title>Kenny Todo App</title>
+    <title>Kenny Todo App-Js</title>
   </head>
   <body>
     <h1 class="heading"><span>ToDo</span> List</h1>
